2003-08-23 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b24

	* Tweaked resize.php.
	  Now you can enter a manual value for image size

	* Tweaked function getTag in classes/Image.php
	  Quoted values from border, width and height

	* Synced all languages against the resulting language addition

2003-08-23 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b23

	* Added the flag pictures :|

2003-08-23 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b22

	* Fixed Bug which caused flags not to be showed.

2003-08-23 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b21

	* Added new option in Config-wizard "show_flags".
	  - Now its possible to show the smart pulldown menu or
	    a table with all flags.

	  - This caused also addtional text in config_data.inc.
	    Synced all languages against these changes.
	    From now on language files from 1.4 and 1.4.1 differ

	* Language Updates: German (de_DE), Slovanian (sl_SI)

2003-08-23 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b20

	 * Edited view_photo.php
	   We now dont show the full system path to the file

2003-08-22 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b19

	* Language Update: turkish (tr_TR)

2003-08-22 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b18

	* Fixed typo in html_wrap/wrapper.header.default

2003-08-22 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b17

	* Language Update: Spanish (es_ES), German (de_DE)

2003-08-22  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b16

	* Edited README

2003-08-22 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b15

	* Synced languages against changes.

	* Language Update: Italian (it_IT)

2003-08-21 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b14

        * Quote attributes that HTML requires to be quoted (i.e. non-numeric
	  things like links and image sources).  Hopefully caught all of them!

2003-08-21 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b13

	* !!! UNDO Change of Value from $GALLERY_EMBEDDED_INSIDE !!!

	* Added new global $GALLERY_EMBEDDED_INSIDE_TYPE which contains the