@@ -1,3 +1,8 @@
+2003-08-23  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b25
+
+	* Allow users to explicitly set date/time strings in Configuration 
+	  Wizard.  $gallery->config_version bumped.
+
 2003-08-23 Jens Tkotz  <jens@peino.de> 1.4.1-cvs-b24
 
 	* Tweaked resize.php.
